# handa

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
scripts/: _web_common.sh  browser_smoke.py  dev.sh  import_check.py  package_linux_release.sh  package_macos_release.sh  package_release.sh  package_windows_release.ps1  smoke_artifact.ps1  smoke_artifact.sh  start.sh
src/: __init__.py  agent.py  agent_goal.py  agent_introspection.py  agent_manager.py  agent_run_worker.py  agent_runtime.py  browser_client.py  browser_daemon.py  browser_environment.py  config.py  goal_judge.py  handacli.py  instructions.py  message_parts.py  model_configs.py  observability.py  progress.py  project_instructions.py  reverse_spec_cli.py  reverse_spec_prompts.py  run_events.py  run_manager.py  run_outcome.py  run_retry.py  runner.py  runtime.py  task_worker.py  turn_worker.py
src/agents/: __init__.py  config_runner.py  native_loader.py  native_runner.py  skill_prompt.py  subagent_prompt.py  tool_catalog.py
src/api/: __init__.py  app.py  attachments.py  background_task_manager.py  (+14 more)
tests/: agent_test_helpers.py  conftest.py  test_adk_user_input.py  test_agent.py  test_agent_goal.py  test_agent_manager.py  test_agent_run_worker.py  test_agent_runtime.py  test_artifact_tools.py  test_automated_tasks.py  test_browser_agent.py  test_browser_daemon.py  test_browser_environment.py  test_browser_environment_playwright.py  test_cancel_cascade.py  test_config.py  test_context_usage_breakdown.py  test_contract_purity.py  test_dictate.py  test_goal_judge.py  test_handa_langgraph_orca.py  test_handa_langgraph_tools.py  test_handacli.py  test_hooks.py  test_instructions.py  test_langgraph_checkpoints.py  test_message_parts.py  test_model_call_retry.py  test_model_configs.py  test_native_tools.py  test_observability.py  test_optimize_prompt.py  test_orca_agent.py  test_progress.py  test_project_instructions.py  test_ralph_agent.py  test_ralph_loop.py  test_reverse_spec_cli.py  test_run_events.py  test_run_manager.py  (+16 more)
(+169 files in other folders)
