[project]
name = "handa-agent"
version = "0.1.0"
description = "HANDA MVP built on Google ADK"
requires-python = ">=3.11"
dependencies = [
  "croniter>=6.2.2",
  "fastapi>=0.136.0",
  "google-adk>=1.32.0",
  "google-genai>=1.0.0",
  "httpx>=0.28.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "openinference-instrumentation-langchain>=0.1.29",
  "playwright>=1.57.0",
  "pydantic>=2.13.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.46.0",
  "websockets>=15.0",
]

[project.optional-dependencies]
# Phoenix agent observability (opt-in via HANDA_PHOENIX_ENABLED=1).
# OpenTelemetry is pinned to the 1.41 line because google-adk requires <=1.41.1.
obs = [
  "arize-phoenix>=12",
  "arize-phoenix-otel>=0.16",
  "openinference-instrumentation-google-adk>=0.1.15",
  "opentelemetry-api==1.41.1",
  "opentelemetry-sdk==1.41.1",
  "opentelemetry-exporter-otlp-proto-http==1.41.1",
]

[project.scripts]
handacli = "src.handacli:main"
handa-web-api = "src.api.app:main"
handa-reverse-spec = "src.reverse_spec_cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
