[project]
name = "handa-agent"
version = "0.1.2"
description = "HANDA native agent MVP"
requires-python = ">=3.11"
dependencies = [
  "croniter>=6.2.2",
  "fastapi>=0.136.0",
  "google-genai>=1.0.0",
  "httpx>=0.28.0",
  "playwright>=1.57.0",
  "pydantic>=2.13.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.46.0",
  "websockets>=15.0",
]

[project.optional-dependencies]
# Phoenix agent observability placeholder.
obs = [
  "arize-phoenix>=12",
  "arize-phoenix-otel>=0.16",
]

[project.scripts]
handacli = "src.handacli:main"
handa-web-api = "src.api.app:main"
handa-reverse-spec = "src.reverse_spec_cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
